# realm-manager

./: README.md
protocol/: README.md
protocol/warden_client/: Cargo.toml  README.md
protocol/warden_client/src/: applciation.rs  application.rs  client.rs  lib.rs  realm.rs  warden.rs
protocol/warden_realm/: Cargo.toml  README.md
protocol/warden_realm/src/: error.rs  lib.rs  request.rs  response.rs
realm/: .gitignore  Makefile  README.md
realm/app-manager/: Cargo.toml  README.md
realm/app-manager/src/: app.rs  cli.rs  config.rs  consts.rs  error.rs  key.rs  main.rs  manager.rs
realm/app-manager/src/dm/: crypt.rs  device.rs  mod.rs
realm/app-manager/src/key/: dummy.rs  hkdf.rs  mod.rs  ring.rs
realm/app-manager/src/launcher/: dummy.rs  handler.rs  mod.rs  oci.rs
realm/app-manager/src/util/: crypto.rs  disk.rs  fs.rs  mod.rs  net.rs  os.rs  serde.rs  token.rs
realm/config/: busybox.config  kernel.config  linux-rsi-pages.patch
realm/example-application/: .gitignore  Cargo.toml  Dockerfile  README.md
realm/example-application/src/: main.rs
realm/initramfs/etc/: group  inittab  mdev.conf  ntp.conf
realm/initramfs/etc/app-manager/: config.yml
realm/initramfs/etc/init.d/: S10mdev  S20network  S21ntp  S40appmanager
realm/initramfs/etc/network/: interfaces
realm/initramfs/usr/share/app-manager/ca/: root-ca.pub
realm/initramfs/usr/share/app-manager/ratls/: root-ca.crt
realm/keys/: root-ca.prv
realm/linux-rsi/: Makefile  rsi.c
realm/mocked_host/: .gitignore  README.md  run.py
utils/: Cargo.toml
utils/src/: lib.rs  serde.rs
utils/src/file_system/: fs_repository.rs  mod.rs  workspace_manager.rs
utils/src/serde/: json_framed.rs  mod.rs
warden/: Cargo.toml  Makefile  README.md
warden/client_lib/: Cargo.toml  README.md
warden/client_lib/src/: lib.rs  request_handlers.rs  warden_client_error.rs
warden/cmd_client/: Cargo.toml  README.md
warden/cmd_client/src/: cmd_handler.rs  cmd_parser.rs  commands.rs  main.rs
warden/warden_daemon/: Cargo.toml  README.md
warden/warden_daemon/src/: app.rs  cli.rs  daemon.rs  lib.rs  main.rs  managers.rs
warden/warden_daemon/src/client_handler/: client_command_handler.rs  client_helper.rs  realm_client_handler.rs
warden/warden_daemon/src/fabric/: realm_fabric.rs  warden_fabric.rs
warden/warden_daemon/src/managers/: application.rs  realm.rs  realm_client.rs  realm_configuration.rs  realm_manager.rs  vm_manager.rs  warden.rs  warden_manager.rs
warden/warden_daemon/src/socket/: unix_socket_server.rs  vsocket_server.rs
warden/warden_daemon/src/storage/: app_disk_manager.rs  mod.rs
warden/warden_daemon/src/utils/: repository.rs  test_utilities.rs
warden/warden_daemon/src/virtualization/: dhcp.rs  dnsmasq_server_handler.rs  lkvm_runner.rs  mod.rs  nat_manager.rs  network.rs  network_manager.rs  qemu_runner.rs  udhcp_server_handler.rs  vm_runner.rs
warden/warden_daemon/src/virtualization/nat_manager/: bridge_handler.rs  devices.rs  fileter_table_handler.rs  filter_table_handler.rs  ip_table_handler.rs  mangle_table_handler.rs  nat_table_handler.rs  tap_handler.rs  utils.rs
warden/warden_daemon/src/virtualization/vm_runner/: command_runner.rs  lkvm.rs  qemu.rs  vm_handler.rs
warden/warden_daemon/tests/: application_management_test.rs  realm_management_test.rs  realm_network_test.rs  start_and_shutdown_test.rs
warden/warden_daemon/tests/common/: mod.rs
warden_client_lib/: Cargo.toml
warden_client_lib/src/: lib.rs  request_handlers.rs  warden_client_error.rs
warden_cmd_client/: Cargo.toml  README.md
warden_cmd_client/src/: cmd_handler.rs  commands.rs  main.rs  utils.rs
warden_daemon/: Cargo.toml  README.md
warden_daemon/src/: client_handler.rs  command_handler.rs  fabric.rs  main.rs  managers.rs  socket.rs  test_utilities.rs  utils.rs
warden_daemon/src/client_handler/: client_command_handler.rs  client_helper.rs  realm_client_handler.rs
warden_daemon/src/command_handler/: client_command_handler.rs
warden_daemon/src/fabric/: application_fabric.rs  realm_fabric.rs  realm_manager_fabric.rs  warden_fabric.rs
warden_daemon/src/managers/: application.rs  application_manager.rs  realm.rs  realm_client.rs  realm_configuration.rs  realm_manager.rs  vm_manager.rs  warden.rs  warden_manager.rs
warden_daemon/src/socket/: unix_socket_server.rs  vsocket_server.rs
warden_daemon/src/storage/: app_disk_manager.rs  mod.rs
warden_daemon/src/utils/: repository.rs  test_utilities.rs
warden_daemon/src/virtualization/: qemu_runner.rs
