[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "signal", "time", "sync", "fs", "process"] }
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
serde_yaml = "0.9.34"
futures-util = "0.3.30"
futures = "0.3"