[package]
name = "warden_cmd_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
shlex = "1.3.0"
tokio = { version = "1.36.0" }
clap = { version = "4.5.9", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
warden_client_lib = { path = "../warden_client_lib"}
warden_client = { path = "../protocol/warden_client" }