[package]
name = "warden_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "signal", "time", "sync", "fs", "process"] }
tokio-vsock = "0.5.0"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.30"
env_logger = "0.11.3"
log = "0.4.21"
async-trait = "0.1.81"
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = { version = "1.0.114", features = ["alloc"] }
mockall = "0.12.1"
parameterized = "2.0.0"
